Menu z-index fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,11 @@
   perspective: 10px;
 }
 
+nav {
+  perspective: 10px;
+  z-index: 1000;
+}
+
 .gradient-01 {
   background-image: linear-gradient(
     270deg,
